--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-body{display: flex; justify-content: center; align-items: center;}
+body{display: flex; justify-content: center; align-items: center; background: cornsilk;}
 .hidden{display: none;}
 #login-form{text-align: center;}
 button{width: 50px;height: 50px; border-radius: 50%; text-align: center; font-size: 12px; padding: 0; margin: 0 6px; border: none; cursor: pointer;}
